--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<!-- <app-footer></app-footer> -->
+<main>
+  <router-outlet></router-outlet>
+</main>
+<app-footer></app-footer>
