--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-5 min-vh-90">
-  <div class="row align-items-center">
+<div class="container">
+  <div class="row align-items-center mt-5">
     <div class="col-7">
       <h1 class="home-title">Bertha's Chocolate Factory</h1>
     </div>
