--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row mt-3" style="min-height: 85.1vh">
     <div class="col-lg-2 col-md-3 col-sm-4">
       <ul class="nav flex-column m-3 mySideNav">
         <li class="nav-item p-2">
