--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,3 +5,15 @@
   font-size: 2.8rem;
   color: #f3f3f3;
 }
+.myBtn {
+  color: orangered;
+  background-color: whitesmoke;
+  border-radius: 15px;
+  border: 0px;
+  letter-spacing: 1px;
+  font-size: 15px;
+}
+.sub-title {
+  color: whitesmoke;
+  letter-spacing: 1px;
+}
