--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,17 @@
 <div class="container">
   <div class="row align-items-center mt-5">
     <div class="col-7">
-      <h1 class="home-title">Bertha's Chocolate Factory</h1>
+      <div>
+        <h1 class="home-title">Bertha's Chocolate Factory</h1>
+      </div>
+      <div class="py-4">
+        <h5 class="sub-title">The Finest Chocolates</h5>
+      </div>
+      <div>
+        <button routerLink="products" class="myBtn p-2 align-items-center">
+          Browse your favourites
+        </button>
+      </div>
     </div>
     <div class="col-5">
       <img src="../../assets/images/home.png" class="img-fluid" />
