--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,19 @@
-<p>not-found works!</p>
+<div class="container px-5" style="text-align: center">
+  <div class="row mt-5 mx-5 bg-white" style="border-radius: 10px">
+    <div class="col">
+      <!-- <div class="row pt-5">
+          <div class="col p-1">
+            <i
+              class="fas fa-check-circle"
+              style="color: green; font-size: 5rem"
+            ></i>
+          </div>
+        </div> -->
+      <div class="row p-5">
+        <div class="col p-1">
+          <h1>404. Page Not Found</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
