--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,41 @@ body {
   text-transform: uppercase;
   color: whitesmoke;
 }
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/fonts/oswald-v35-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("./assets/fonts/oswald-v35-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("./assets/fonts/oswald-v35-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("./assets/fonts/oswald-v35-latin-regular.woff") format("woff"),
+    /* Modern Browsers */ url("./assets/fonts/oswald-v35-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("./assets/fonts/oswald-v35-latin-regular.svg#Oswald") format("svg"); /* Legacy iOS */
+}
+/* permanent-marker-regular - latin */
+@font-face {
+  font-family: "Permanent Marker";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/fonts/permanent-marker-v10-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local("Permanent Marker Regular"), local("PermanentMarker-Regular"),
+    url("./assets/fonts/permanent-marker-v10-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("./assets/fonts/permanent-marker-v10-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("./assets/fonts/permanent-marker-v10-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */
+      url("./assets/fonts/permanent-marker-v10-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("./assets/fonts/permanent-marker-v10-latin-regular.svg#PermanentMarker")
+      format("svg"); /* Legacy iOS */
+}
